--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
         <br><br>
         For victims of leprosy, Moloka'i was understood to be their grave even before they were to die. But for all the despair associated with this settlement, people in Moloka'i knew how to enjoy life. The people partied, danced, had their own cozy homes, and the made best with what they had given their circumstances. At times, I saw a civilization that was far more tolerant and cohesive than in other places around the world at this time in history. They understood each other at a level other people didn't. While others shunned them as outcasts and looked at them with disgust, and revulsion the people who had leprosy confided in each other to find a sense of belonging and companionship that they were denied by others who didn’t have the disease.
         <br><br>
-        Just as with any real life, horrible atrocities are apart of it, as well glorious events of familial or agape love. Moloka’i will have you reaching for the box of tissues, only to have you smiling again by the time the tissues are in hand.  It is an emotional roller coaster with a plethora of pinnacle moments and lows that reach into the depths of hell. With that said I highly recommend you reading Rachel’s journey as she goes on through life living it to the fullest, given her circumstances, on the beautiful island of Molokai. 
-        </p></li> -->
+        Just as with any real life, horrible atrocities are apart of it, as well glorious events of familial or agape love. Moloka’i will have you reaching for the box of tissues, only to have you smiling again by the time the tissues are in hand.  It is an emotional roller coaster with a plethora of pinnacle moments and lows that reach into the depths of hell. With that said I highly recommend you reading Rachel’s journey as she goes on through life living it to the fullest, given her circumstances, on the beautiful island of Molokai. -->
+        </p></li> 
         <br><br>
         <li class="subh"><u>Brian's Critique</u></li>
         <li><p> Similar to a painting, a book is a form of art, a form of expression, but with words. Each book holds an interesting story created from the mind of the author. As we open a book, we dive deep into the author's world and become fascinated with what's inside. As a new generation unfolds, it his hard for many books to be remembered. New stories are born while old stories fade away in memory. It is why it is important for us to recall these stories and spread their existence in the present. That way, the memory of this story shall be preserved for the next generation to experience.
-          <br>
-          <br>
+          <br><br>
         Molokai is novel that unravels one of Hawaii's most darkest eras of all: the leprosy outbreak.Through this book, a person will get to view the struggles of the lepers in Hawaii, including their banishment into the leper colony on the island of Molokai and the anguish they must face from the skin-rotting effects of the disease. Once landing on the island shores, a young Rachel is pitted into a lifelong course of challenges while being crept upon by the disease that brought her into Molokai. For those who are into researching Hawaiian history, especially the leper outbreak incident, I would highly recommend reading this book.
       </p></li>
       <br><br>
